Clean up and samples

--- a/app/Pismo_DE_Test.ipynb
+++ b/app/Pismo_DE_Test.ipynb
@@ -77,27 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1581dc70-819e-4fe9-b40a-f1b34f810f01",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local Fake Data Generator: Wrote fake data length = 10000 destination_path = '/pismo-data/source/' filename = 'fake_events_21bc6d5b-cc04-4340-9b3c-2ce14ac54be3_20240814190546' unique_uuid = True \n",
-      "Local Fake Data Generator: Wrote fake data length = 1000 destination_path = '/pismo-data/source/' filename = 'fake_events_a37bc4de-4da1-44df-9577-fac6e6731e1c_20240814190547' unique_uuid = False \n",
-      "Local Fake Data Generator: Wrote fake data length = 10000 destination_path = '/pismo-data/source/' filename = 'fake_events_6d30c043-986a-48b0-8ed5-7914d687ae92_20240814190547' unique_uuid = True \n",
-      "Local Fake Data Generator: Wrote fake data length = 1000 destination_path = '/pismo-data/source/' filename = 'fake_events_2ae764dd-9b9c-4dcf-90d8-b8e25266a50e_20240814190547' unique_uuid = False \n",
-      "Local Fake Data Generator: Wrote fake data length = 10000 destination_path = '/pismo-data/source/' filename = 'fake_events_7f131aed-06b1-41ff-8e81-f79c3b58461e_20240814190547' unique_uuid = True \n",
-      "Local Fake Data Generator: Wrote fake data length = 1000 destination_path = '/pismo-data/source/' filename = 'fake_events_ccc3595a-b2a0-44c7-86e8-131a02cffb20_20240814190548' unique_uuid = False \n",
-      "Local Fake Data Generator: Wrote fake data length = 10000 destination_path = '/pismo-data/source/' filename = 'fake_events_512b5684-6d6b-451e-bbb1-db72b5c5778a_20240814190548' unique_uuid = True \n",
-      "Local Fake Data Generator: Wrote fake data length = 1000 destination_path = '/pismo-data/source/' filename = 'fake_events_ffed640d-7595-4ae3-879b-e1b13f756726_20240814190549' unique_uuid = False \n",
-      "Local Fake Data Generator: Wrote fake data length = 10000 destination_path = '/pismo-data/source/' filename = 'fake_events_6c4380cd-97fa-48da-8cbd-4e4e5eab4fce_20240814190549' unique_uuid = True \n",
-      "Local Fake Data Generator: Wrote fake data length = 1000 destination_path = '/pismo-data/source/' filename = 'fake_events_ede0ea28-c38b-4bbf-844f-8c00170fb0b8_20240814190549' unique_uuid = False \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate data\n",
     "\n",
@@ -129,30 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e939bee1-d9c0-48af-93ac-1e7eff117db0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+-----------+--------------------+--------------------+-------------------+\n",
-      "|summary|     domain|            event_id|          event_type|          timestamp|\n",
-      "+-------+-----------+--------------------+--------------------+-------------------+\n",
-      "|  count|     110000|              110000|              110000|             110000|\n",
-      "|   mean|       NULL|                NULL|                NULL|               NULL|\n",
-      "| stddev|       NULL|                NULL|                NULL|               NULL|\n",
-      "|    min|    account|0000bcfc-ba17-41c...|account-status-ch...|2021-08-15T01:42:55|\n",
-      "|    25%|       NULL|                NULL|                NULL|               NULL|\n",
-      "|    50%|       NULL|                NULL|                NULL|               NULL|\n",
-      "|    75%|       NULL|                NULL|                NULL|               NULL|\n",
-      "|    max|transaction|ffff580b-ada5-445...|transaction-new-v...|2024-08-14T18:45:45|\n",
-      "+-------+-----------+--------------------+--------------------+-------------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.dataframe import DataFrame\n",
@@ -201,28 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e6115c9e-6e72-4bb5-be24-6a1953c29007",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding unique event and domain ids\n",
-      "Deduplicating data...\n",
-      "Time partitioning... \n",
-      "Duplicated data: \n",
-      "+-----------+-----+\n",
-      "|     domain|count|\n",
-      "+-----------+-----+\n",
-      "|transaction| 1514|\n",
-      "|    account| 1524|\n",
-      "+-----------+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import Window\n",
     "\n",
@@ -258,7 +203,7 @@
     "    .drop('domain_id')\n",
     "\n",
     "print('Duplicated data: ')\n",
-    "duplicated.groupBy([col('domain')]).count().show()"
+    "duplicated.groupBy(col('domain')).count().show()"
    ]
   },
   {
@@ -270,7 +215,7 @@
     "\n",
     "This step saves the output on HDFS cluster with Parquet format, partitioned by `domain`+`date` (broken down). Example:\n",
     "```\n",
-    "domain=transation/\n",
+    "domain=transaction/\n",
     "  year=2024/\n",
     "    month=9/\n",
     "        day=10/\n",
@@ -287,19 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ecbba653-3107-4007-a19f-c09e1fb77190",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving to hdfs://hadoop-namenode:8020/pismo-data/output/\n",
-      "Saved!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Saving to {OUTPUT_DATA}')\n",
     "final\\\n",
@@ -321,35 +257,16 @@
     "This step reads the recently processed data and validates the output.\n",
     "\n",
     "Besides the above basic validation, it checks if data was truly de-duplicated (counts only)\n",
-    "\n"
+    "\n",
+    "Note: the `recursiveFileLookup` allows Spark to read based on the partition. This is not used here, but is very useful when filtering.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "85b84814-f79b-4474-ade0-2a2cdcf43320",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+--------------------+--------------------+-------------------+-----------+------------------+------------------+------------------+\n",
-      "|summary|            event_id|          event_type|          timestamp|     domain|              year|             month|               day|\n",
-      "+-------+--------------------+--------------------+-------------------+-----------+------------------+------------------+------------------+\n",
-      "|  count|              106962|              106962|             106962|     106962|            106962|            106962|            106962|\n",
-      "|   mean|                NULL|                NULL|               NULL|       NULL|2022.6363755352368| 6.536844860791683|15.718432714421944|\n",
-      "| stddev|                NULL|                NULL|               NULL|       NULL|0.9501618138577126|3.4452462353122755| 8.795556518776847|\n",
-      "|    min|0000bcfc-ba17-41c...|account-status-ch...|2021-08-15T01:42:55|    account|              2021|                 1|                 1|\n",
-      "|    25%|                NULL|                NULL|               NULL|       NULL|              2022|                 4|                 8|\n",
-      "|    50%|                NULL|                NULL|               NULL|       NULL|              2023|                 7|                16|\n",
-      "|    75%|                NULL|                NULL|               NULL|       NULL|              2023|                10|                23|\n",
-      "|    max|ffff580b-ada5-445...|transaction-new-v...|2024-08-14T18:45:45|transaction|              2024|                12|                31|\n",
-      "+-------+--------------------+--------------------+-------------------+-----------+------------------+------------------+------------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Validation over Parquet data\n",
     "\n",
@@ -372,47 +289,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f48e4ac-fee6-4544-bd0f-f9b543816066",
+   "metadata": {},
+   "source": [
+    "### Validation over transations\n",
+    "\n",
+    "To validate data over transactions, we read data and check if the schema checks with expected data: \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33ccc7d8-6c68-44a2-bd08-bcefb0d7d28d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_transactions = spark.read.option('recursiveFileLookup', False).parquet(OUTPUT_DATA).where(col('domain') == 'transaction').select('domain', 'event_id', 'event_type', 'timestamp', 'data.*')\n",
+    "\n",
+    "assert isinstance(valid_transactions, DataFrame)\n",
+    "assert not valid_transactions.isEmpty()\n",
+    "\n",
+    "for _col in [ 'id', 'account_orig_id', 'account_dest_id', 'amount', 'currency' ]:\n",
+    "    assert _col in valid_transactions.columns\n",
+    "\n",
+    "valid_transactions.groupBy('domain').count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b4b6a04d-816e-4f3c-9fc4-7338932e714b",
    "metadata": {},
    "source": [
     "# Data is ready to be consumed!\n",
     "\n",
-    "Below is a sample of getting the total amount of accounts, by status. \n",
+    "Below is a sample of getting the total of transactions by currency. \n",
     "\n",
     "> (based on fake data that was generated)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1c4c1b24-5066-47df-a037-9178e5ba48c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+-----------+\n",
-      "|new_status|sum(amount)|\n",
-      "+----------+-----------+\n",
-      "|  INACTIVE|       NULL|\n",
-      "|   BLOCKED|       NULL|\n",
-      "| SUSPENDED|       NULL|\n",
-      "|   DELETED|       NULL|\n",
-      "|    ACTIVE|       NULL|\n",
-      "+----------+-----------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_columns = [ col(_col) for _col in validation.columns if _col != 'data' ]\n",
     "df_columns.append('data.*')\n",
     "\n",
-    "accounts = validation.where(col('domain') == 'account').select(*df_columns) \n",
+    "transactions = validation.where(col('domain') == 'transaction').select(*df_columns) \n",
     "\n",
     "# Total `amount` by `new_status`\n",
-    "accounts.groupBy('new_status').sum('amount').show()"
+    "transactions.groupBy('currency').sum('amount').show()"
    ]
   }
  ],
